--- a/sandboxes/Game Demo/Makefile
+++ b/sandboxes/Game Demo/Makefile
@@ -1,9 +1,9 @@
 CC = gcc
-OBJECTS = App.o surface.o window_surface.o sprite.o animated_sprite.o SoundBank.o
+OBJECTS = App.o surface.o sprite.o window.o SoundBank.o
 
 
-CPPFLAGS = -Wall -Wextra -g `sdl-config --cflags`
-LDFLAGS=`sdl-config --libs` -lSDL -lSDL_image -lSDL_mixer -lstdc++
+CPPFLAGS = -Wall -Wextra -g -pedantic `sdl2-config --cflags`
+LDFLAGS=`sdl2-config --libs` -lSDL2 -lSDL2_image -lSDL2_mixer -lstdc++
 
 EXEC = sdl
 
@@ -26,6 +26,9 @@ animated_sprite.o: libs/animated_sprite/animated_sprite.h libs/animated_sprite/a
 
 window_surface.o: libs/window_surface/window_surface.h libs/window_surface/window_surface.cpp
 	$(CC) $(CPPFLAGS) -c libs/window_surface/window_surface.cpp
+
+window.o: libs/window/window.h libs/window/window.cpp
+	$(CC) $(CPPFLAGS) -c libs/window/window.cpp
 
 SoundBank.o: SoundBank.h SoundBank.cpp
 	$(CC) $(CPPFLAGS) -c SoundBank.cpp
